force-app/main/default/objects/EmailSuppressionRule__c/EmailSuppressionRule__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>to Validate Email before Send out</description>
    <label>Email Suppression Rule</label>
</CustomObject>