force-app/main/default/objects/EmailSuppressionRule__c/fields/Email_Suppression_Rule__c.field-meta.xml
<CustomField>
    <fullName>Email_Suppression_Rule__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Suppression Rule</label>
    <length>20</length>
    <type>Text</type>
</CustomField>