force-app/main/default/objects/EmailSuppressionRule__c/fields/Text_Massage__c.field-meta.xml
<CustomField>
    <fullName>Text_Massage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text_Massage</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>